don't use lombok.var :-(