@@ -9,13 +9,16 @@ plugins {
   //?  id("org.gretty") version "4.0.+" // https://gretty-gradle-plugin.github.io/gretty-doc/
 
   id("io.freefair.lombok")   version "latest.release" // id 'io.franzbecker.gradle-lombok' version 'latest.release'
+  id("name.remal.sonarlint") version "latest.release" // https://github.com/remal-gradle-plugins/sonarlint + https://lift.sonatype.com/
+  id("net.ltgt.errorprone")  version "latest.release" // https://errorprone.info/
 }
 
-java { // https://docs.gradle.org/current/userguide/toolchains.html
-  toolchain {
-    languageVersion = JavaLanguageVersion.of(8)
-  }
-}
+//java { // https://docs.gradle.org/current/userguide/toolchains.html
+//  toolchain {
+//    languageVersion = JavaLanguageVersion.of(8)
+//  }
+//}
+
 repositories {
   mavenLocal()
   jcenter() // helps with JMS!
@@ -31,10 +34,32 @@ repositories {
 tasks.withType(JavaCompile).configureEach {
   options.encoding = 'UTF-8'
   options.compilerArgs.addAll(['-Xlint:all', '-parameters', '-g', '-Xmaxwarns', '999'])
+
+  sourceCompatibility = 17 // for the IDE support
+  targetCompatibility = 8
+  options.release.set(8) // javac --release 7..18+
   options.deprecation = true
+  javaCompiler.set( javaToolchains.compilerFor {
+    languageVersion = JavaLanguageVersion.of(17)
+  })
+
+  options.errorprone {
+    enabled = true
+    disableWarningsInGeneratedCode = true
+    excludedPaths = ".*/(generated|test).*/.*"
+    disable("MissingSummary")
+    disable("ParameterName")
+    disable("UnusedVariable")
+    errorproneArgs = ["--illegal-access=warn"]
+  }
 }
 
 dependencies {
+  errorprone "com.google.errorprone:error_prone_core:latest.release"
+  // Java 8 support
+  annotationProcessor 'com.github.bsideup.jabel:jabel-javac-plugin:latest.release' // 0.4.2
+  compileOnly 'com.github.bsideup.jabel:jabel-javac-plugin:latest.release'
+
   implementation("javax.annotation:javax.annotation-api:1.3.+") // @Resource
 
   implementation 'javax.servlet:servlet-api:2.5'
@@ -109,6 +134,9 @@ test {
   enableAssertions = true
   maxHeapSize = "500m"
 
+  sourceCompatibility = 17
+  targetCompatibility = 8
+
   systemProperty("slf4j.detectLoggerNameMismatch", "true")
   systemProperty("file.encoding", "UTF-8")
   systemProperty("user.language", "en")
@@ -116,4 +144,7 @@ test {
 }
 lombok {
   version = "latest.release"
+}
+sonarLint {
+  ignoreFailures = true
 }
